--- a/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
@@ -85,6 +85,12 @@
                             }}
                         </span>
                     </div>
+                    <mat-card-actions class="mt-2 flex justify-center">
+                        <button mat-fab extended (click)="goToQuestionary(questionary.Id)"
+                            class="mt-2 bg-[#4f46e5] opacity-80 hover:bg-[#4338ca]  hover:opacity-100 text-white font-bold py-2 px-4 rounded shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+                            Iniciar Evaluación Psicológica
+                        </button>
+                    </mat-card-actions>
                 </mat-card-content>
             </mat-card>
             }
