--- a/angular.client/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/angular.client/src/app/modules/auth/sign-in/sign-in.component.html
@@ -2,15 +2,19 @@
     <div
         class="md:flex md:items-center md:justify-end w-full sm:w-auto md:h-full md:w-1/2 py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card">
         <div class="w-full max-w-80 sm:w-80 mx-auto sm:mx-0">
-            <!-- Logo -->
-            <div class="w-60">
-                <img src="assets/images/logo/logo-app2.png" alt="Logo de la aplicación">
+            <div class="flex justify-center items-center flex-col w-full">
+                <div class="w-full text-center">
+                    <!-- Logo -->
+                    <img src="assets/images/logo/logo-app2.png" alt="Logo de la aplicación">
+                    <!-- Title -->
+                    <div class="mt-8 text-4xl font-extrabold tracking-tight leading-tight">
+                        Inicio de sesión
+                    </div>
+                </div>
             </div>
 
-            <!-- Title -->
-            <div class="mt-8 text-4xl font-extrabold tracking-tight leading-tight">Iniciar sesión</div>
             <!-- Alert -->
-            <fuse-alert class="mt-8" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false" [type]="alert.type"
+            <fuse-alert class="mt-5" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false" [type]="alert.type"
                 [@shake]="alert.type === 'error'">
                 {{alert.message}}
             </fuse-alert>
