chore: Update questionary-list component template and fix Spanish translations

--- a/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
@@ -46,7 +46,7 @@
             <mat-card class="col-span-4">
                 <mat-card-content>
                     <div class="text-center">
-                        Evaluacion terminada por el docente
+                        Evaluacion psicologica cerrada por el docente
                     </div>
                 </mat-card-content>
             </mat-card>
@@ -54,7 +54,7 @@
             <mat-card class="col-span-4">
                 <mat-card-content>
                     <div class="text-center">
-                        Evaluacion bloqueada por el docente
+                        El docente aun no ha iniciado la evaluacion psicologica
                     </div>
                 </mat-card-content>
             </mat-card>
@@ -97,15 +97,15 @@
             </mat-card>
             }
             } @else {
-                    <mat-card class="col-span-4 text-lg text-[#4F46E5]">
-                        <mat-card-content>
-                            <div class="text-center">
-                                <b>
-                                    No existen evaluaciones psicologicas asignadas.
-                                </b>
-                            </div>
-                        </mat-card-content>
-                    </mat-card>
+            <mat-card class="col-span-4 text-lg text-[#4F46E5]">
+                <mat-card-content>
+                    <div class="text-center">
+                        <b>
+                            No existen evaluaciones psicologicas asignadas.
+                        </b>
+                    </div>
+                </mat-card-content>
+            </mat-card>
             }
         </div>
     </div>
