--- a/angular.client/src/app/modules/admin/classrooms/components/reporte-salon/reporte-salon.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/reporte-salon/reporte-salon.component.html
@@ -46,7 +46,7 @@
             <ng-container matColumnDef="nombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
                 <td mat-cell *matCellDef="let element">
-                    {{(element.ApellidoPaterno + ' '+ element.ApellidoMaterno + ', ' + element.Nombres)| titlecase}}
+                    {{(element.nombre)| titlecase}}
                 </td>
             </ng-container>
             <!-- DNI Column -->
