--- a/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
@@ -32,81 +32,125 @@
             </div>
         </div>
     </div>
-
     <div class="flex-auto px-6 sm:px-10 sm:pt-5">
-        <div class="w-auto max-w-72">
-            <button mat-raised-button class="mb-5" color="accent" (click)="obtenerEvalucionesEstudiantes()">
-                <mat-icon>refresh</mat-icon>
-                Recargar evaluaciones
-            </button>
+        <div class="w-auto max-w-72 mx-auto">
+            <div class="flex flex-col items-center">
+                <button mat-stroked-button (click)="obtenerEvalucionesEstudiantes()" class="bg-white mb-5">
+                    <mat-icon>refresh</mat-icon>
+                    <p>
+                        Actualizar Lista de Evaluaciones
+                    </p>
+                </button>
 
-            @if(questionary != undefined ){
+                @if(questionary != undefined ){
 
-            @if(questionary.estadoAula == "F") {
-            <mat-card class="col-span-4">
-                <mat-card-content>
-                    <div class="text-center">
-                        Evaluacion psicologica cerrada por el docente
-                    </div>
-                </mat-card-content>
-            </mat-card>
-            } @else if (questionary.estadoAula == "N") {
-            <mat-card class="col-span-4">
-                <mat-card-content>
-                    <div class="text-center">
-                        El docente aun no ha iniciado la evaluacion psicologica
-                    </div>
-                </mat-card-content>
-            </mat-card>
-            }
-            @else if(questionary.estadoAula == "P") {
-            <mat-card class="p-3">
-                <mat-card-content>
-                    <div class="mb-3">
-                        <b>Inicio: </b>{{ questionary.FechaInicio | date : "dd/MM/yyyy" }}
-                    </div>
-                    <div class="mb-3">
-                        <b>Fin: </b>{{ questionary.FechaFin | date : "dd/MM/yyyy" }}
-                    </div>
-                    <div>
-                        <b>Estado: </b>
-                        <span class="px-2 py-1 rounded shadow text-base font-bold" [ngClass]=" questionary.Estado == 'N' ? 'bg-gray-200 text-gray-800'
-                                                                            : questionary.Estado == 'P'
-                                                                            ? 'bg-orange-200 text-orange-800'
-                                                                            : 'bg-green-200 text-green-800'
-                                                                    ">
-                            {{
-                            questionary.Estado == "N"
-                            ? "Sin Comenzar"
-                            : questionary.Estado == "P"
-                            ? 'En Proceso'
-                            : "Completada"
-                            }}
-                        </span>
-                    </div>
-                    @if(questionary.Estado != "F"){
-                    <mat-card-actions class="mt-2 flex justify-center">
-                        <button mat-fab extended (click)="goToQuestionary(questionary.Id)"
-                            class="mt-2 bg-[#4f46e5] opacity-80 hover:bg-[#4338ca]  hover:opacity-100 text-white font-bold py-2 px-4 rounded shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
-                            Iniciar Evaluación Psicológica
-                        </button>
-                    </mat-card-actions>
-                    }
+                @if(questionary.estadoAula == "F") {
+                <mat-card class="col-span-4">
+                    <mat-card-content>
+                        <div class="text-center">
+                            Evaluacion psicologica cerrada por el docente
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+                } @else if (questionary.estadoAula == "N") {
+                <mat-card class="col-span-4">
+                    <mat-card-content>
+                        <div class="text-center">
+                            El docente aun no ha iniciado la evaluacion psicologica
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+                }
+                @else if(questionary.estadoAula == "P") {
+                <mat-card class="p-3">
+                    <mat-card-content>
+                        <div class="mb-3">
+                            <b>Inicio: </b>{{ questionary.FechaInicio | date : "dd/MM/yyyy" }}
+                        </div>
+                        <div class="mb-3">
+                            <b>Fin: </b>{{ questionary.FechaFin | date : "dd/MM/yyyy" }}
+                        </div>
+                        <div>
+                            <b>Estado: </b>
+                            <span class="ms-2 px-2 py-1 rounded shadow text-base font-bold" [ngClass]=" questionary.Estado == 'N' ? 'bg-gray-200 text-gray-800'
+                                                                        : questionary.Estado == 'P'
+                                                                        ? 'bg-orange-200 text-orange-800'
+                                                                        : 'bg-green-200 text-green-900'
+                                                                ">
+                                {{
+                                questionary.Estado == "N"
+                                ? "Sin Comenzar"
+                                : questionary.Estado == "P"
+                                ? 'En Proceso'
+                                : "Completada"
+                                }}
+                            </span>
+                        </div>
+                        @if(questionary.Estado != "F"){
+                        <mat-card-actions class="mt-5 flex justify-center">
+                            <button mat-fab extended (click)="goToQuestionary(questionary.Id)" class="pulse-button">
+                                <p> Iniciar Evaluación Psicológica</p>
+                            </button>
+                        </mat-card-actions>
 
-                </mat-card-content>
-            </mat-card>
-            }
-            } @else {
-            <mat-card class="col-span-4 text-lg text-[#4F46E5]">
-                <mat-card-content>
-                    <div class="text-center">
-                        <b>
-                            No existen evaluaciones psicologicas asignadas.
-                        </b>
-                    </div>
-                </mat-card-content>
-            </mat-card>
-            }
+                        <style>
+                            .pulse-button {
+                                @apply text-white font-bold py-2 px-4 rounded-lg shadow-md transition-transform ease-in-out duration-300;
+                                background-color: #201658;
+                                animation: pulse 2.5s infinite;
+                                /* Duración ajustada a 2.5 segundos */
+                                letter-spacing: 0.08rem;
+                                line-height: 8;
+                                text-align: center;
+                            }
+
+                            .pulse-button:hover {
+                                transform: scale(1.1);
+                                background-color: #1D24CA;
+                                /* Color del botón al hacer hover */
+                                color: white;
+                                /* Color del texto en blanco al hacer hover */
+                                box-shadow: 0 0 20px rgba(29, 36, 202, 0.8);
+                                /* Brillo más intenso y grande en hover */
+                                cursor: pointer;
+                            }
+
+                            @keyframes pulse {
+
+                                0%,
+                                100% {
+                                    transform: scale(1);
+                                    box-shadow: 0 0 0 0 rgba(152, 171, 238, 0.6);
+                                    /* Color azul claro de las pulsaciones */
+                                }
+
+                                50% {
+                                    transform: scale(1.1);
+                                    /* Pulsaciones ligeramente más grandes */
+                                    box-shadow: 0 0 15px 15px rgba(152, 171, 238, 0);
+                                    /* Expansión más grande de las pulsaciones */
+                                }
+                            }
+                        </style>
+
+                        }
+                    </mat-card-content>
+                </mat-card>
+                }
+                } @else {
+                <mat-card class="col-span-4 text-lg text-[#4F46E5]">
+                    <mat-card-content>
+                        <div class="text-center">
+                            <b>
+                                No existen evaluaciones psicologicas asignadas.
+
+                            </b>
+                        </div>
+                    </mat-card-content>
+
+                </mat-card>
+                }
+            </div>
         </div>
     </div>
 </div>
